[tool.poetry]
name = "ls_api"
version = "0.1.1"
description = "Simple Landcape API client lib."
authors = ["Simon Poirier <simpoir@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
